--- a/MVVM/View/PessoaView.xaml
+++ b/MVVM/View/PessoaView.xaml
@@ -6,7 +6,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp3.MVVM.View"
              xmlns:viewModel="clr-namespace:WpfApp3.MVVM.ViewModel"
-             mc:Ignorable="d" d:DesignWidth="800" Height="532">
+             mc:Ignorable="d" Height="565" Width="799">
 
     <StackPanel Margin="20">
         <Grid Margin="0,0,10,0" RenderTransformOrigin="0.477,0.501">
@@ -56,7 +56,7 @@
                       AutoGenerateColumns="False"
                       IsReadOnly="True"
                           Height="136"
-                          Width="366"
+                          Width="390"
                       Name="datagridPessoas"
                       SelectedItem="{Binding PessoasSelecionado}"
                           SelectionMode="Single" >
@@ -76,12 +76,13 @@
                     </i:Interaction.Triggers>
                 </DataGrid>
             </ScrollViewer>
-            <DataGrid Margin="348,275,12,63" Grid.Row="1"
+            <DataGrid Margin="2,313,2,25" Grid.Row="1"
+                       Height="136"
                       ItemsSource="{Binding PedidosFiltrados}"
                       AutoGenerateColumns="False"
                       IsReadOnly="True"
                       Name="datagridPed"
-                      SelectedItem="{Binding PedidosSelecionado}" SelectionMode="Single" Grid.ColumnSpan="2">
+                      SelectedItem="{Binding PedidosSelecionado}" SelectionMode="Single" Grid.Column="1">
 
                 <DataGrid.Columns>
 
@@ -121,7 +122,8 @@
 
                 </DataGrid.Columns>
             </DataGrid>
-            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="1,131,30,275" Grid.Column="1">
+
+            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="328,131,30,275" Grid.ColumnSpan="2">
                 <Button Margin="22,19,0,19"
                         Width="63" 
                         Height="30"
@@ -130,7 +132,7 @@
                         CommandParameter="{Binding}"
                         Command="{Binding Editar}"
                         Content="Editar" Background="#FFC5C6CB"/>
-                <Button Margin="22 0 0 0"
+                <Button Margin="10 0 0 0"
                         Width="63" 
                         Height="30" 
                         Padding="3" 
@@ -138,7 +140,7 @@
                         CommandParameter="{Binding}"
                         Command="{Binding Deletar}"
                         Content="Deletar" Background="#FFE68282"/>
-                <Button Margin="22 0 0 0"
+                <Button Margin="10 0 0 0"
                         Width="85" 
                         Height="30" 
                         Padding="3" 
@@ -147,7 +149,7 @@
                         Command="{Binding IncluirPedidoCommand}"
                         Content="Novo Pedido" Background="#FF4DCF5F" Click="Button_Click"/>
             </StackPanel>
-            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="31,207,-20,199" Grid.Column="1">
+            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="347,243,13,163" Grid.ColumnSpan="2">
                 <Button Margin="5,19,0,19"
                     Name="RECEBIDO"
                     Width="63" 
@@ -181,6 +183,9 @@
                     Content="Pago" Background="#FFFF00"
                     ToolTip="Filtrar Pedidos Pagos" Click="FiltroStatusPedido"/>
             </StackPanel>
+            <Canvas Grid.Column="1" HorizontalAlignment="Left" Height="10" Margin="1,232,-36,0" Grid.Row="1" VerticalAlignment="Top" Width="436">
+                <Line X1="0" Y1="1" X2="500" Y2="1" Stroke="Black" StrokeThickness="1" Width="417"></Line>
+            </Canvas>
         </Grid>
     </StackPanel>
 </UserControl>
