--- a/MVVM/View/PessoaView.xaml
+++ b/MVVM/View/PessoaView.xaml
@@ -94,7 +94,11 @@
                     <DataGridTemplateColumn Header="">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button >E</Button>
+                                <Button ToolTip="Marcar como pago"
+                                        Content="P"
+                                        Name="Pago"
+                                        Click="Button_Click"
+                                        CommandParameter="{Binding}"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
@@ -103,7 +107,11 @@
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
 
-                                <Button >P</Button>
+                                <Button ToolTip="Marcar como enviado"
+                                        Content="E"
+                                        Name="Enviado"
+                                        Click="Button_Click"
+                                        CommandParameter="{Binding}"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
@@ -113,6 +121,7 @@
                             <DataTemplate>
                                 <Button ToolTip="Marcar como recebido"
                                         Content="R"
+                                        Name="Recebido"
                                         Click="Button_Click"
                                         CommandParameter="{Binding}" />
                             </DataTemplate>
