--- a/MVVM/View/PessoaView.xaml
+++ b/MVVM/View/PessoaView.xaml
@@ -100,19 +100,19 @@
                                         Width="20"
                                         Name="Pago"
                                         Click="Button_Click"
-                                        CommandParameter="{Binding}"/>
+                                        CommandParameter="{Binding}" Background="#FFFF00"/>
                                     <Button ToolTip="Marcar como enviado"
                                         Content="E"
                                         Width="20"
                                         Name="Enviado"
                                         Click="Button_Click"
-                                        CommandParameter="{Binding}"/>
+                                        CommandParameter="{Binding}" Background="#FFE68282"/>
                                     <Button ToolTip="Marcar como recebido"
                                         Content="R"
                                         Width="20"
                                         Name="Recebido"
                                         Click="Button_Click"
-                                        CommandParameter="{Binding}" />
+                                        CommandParameter="{Binding}" Background="#FF4DCF5F" />
                                 </StackPanel>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
